# synapse-knowledge-manager

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: error.rs  lib.rs  models.rs  services.rs
crates/synapse-core/src/storage/: backend.rs  dao.rs  database.rs  db_manager.rs  mod.rs  relation_dao.rs
crates/synapse-editor/: Cargo.toml
crates/synapse-editor/src/: core.rs  lib.rs  parser.rs  renderer.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  style.css
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/core/: error.rs  mod.rs  models.rs  services.rs
src/editor/: mod.rs  parser.rs  renderer.rs
src/storage/: dao.rs  database.rs  db_manager.rs  mod.rs  queries.rs  relation_dao.rs
