[package]
name = "synapse-knowledge-manager"
version = "0.1.0"
edition = "2024"
description = "A local-first knowledge management system combining the best of Notion and Obsidian"
authors = ["dustgrow <jz.long@qq.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dustgrow/synapse-knowledge-manager"
keywords = ["knowledge-management", "note-taking", "markdown", "local-first"]
categories = ["office", "productivity"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Async runtime (for future use)
# tokio = { version = "1.0", features = ["full"] }

# Database
rusqlite = { version = "0.38.0", features = ["bundled", "backup", "blob", "functions", "hooks", "limits", "trace", "unlock_notify", "window"] }

# UUID generation
uuid = { version = "1.19.0", features = ["v4"] }

# Cryptography (for SHA-256 hashing)
sha2 = "0.10"

# MIME type detection
mime_guess = "2.0"

# CRDT (for future use)
# loro = "0.5"
