[workspace]
members = ["crates/synapse-core", "crates/synapse-editor", "src-tauri"]

[package]
name = "synapse-knowledge-manager"
version = "0.1.0"
edition = "2024"
description = "A local-first knowledge management system combining the best of Notion and Obsidian"
authors = ["dustgrow <jz.long@qq.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dustgrow/synapse-knowledge-manager"
keywords = ["knowledge-management", "note-taking", "markdown", "local-first"]
categories = ["office", "productivity"]

[dependencies]
synapse-core = { path = "crates/synapse-core" }
synapse-editor = { path = "crates/synapse-editor" }

[[bin]]
name = "synapse-cli"
path = "src/bin/cli.rs"
doc = false
