[package]
name = "synapse-app"
version = "0.1.0"
description = "Synapse Knowledge Manager - Tauri Application"
authors = ["dustgrow <jz.long@qq.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dustgrow/synapse-knowledge-manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Use the library crate from parent directory
# Note: Package name uses hyphens, but crate name uses underscores
synapse-knowledge-manager = { path = "..", package = "synapse-knowledge-manager" }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
