[package]
name = "synapse-core"
version = "0.1.0"
edition = "2024"
description = "Core models, storage abstraction, and services for Synapse Knowledge Manager"
authors = ["dustgrow <jz.long@qq.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dustgrow/synapse-knowledge-manager"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
rusqlite = { version = "0.38.0", features = [
    "bundled",
    "backup",
    "blob",
    "functions",
    "hooks",
    "limits",
    "trace",
    "unlock_notify",
    "window",
] }
uuid = { version = "1.19.0", features = ["v4"] }
sha2 = "0.10"
mime_guess = "2.0"
